--- a/src/com/gamestore/interfaces/ListarCliente.form
+++ b/src/com/gamestore/interfaces/ListarCliente.form
@@ -63,8 +63,34 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="tableClientes">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xd;&#xa;&#x9;new Object[][]&#xd;&#xa;&#x9;{&#xd;&#xa;&#x9;&#x9;{&quot;Zezinho&quot;, &quot;Jos&#xe9; da Silva&quot;, &quot;18&quot;, &quot;000.000.000-00&quot;}, &#xd;&#xa;&#x9;&#x9;{&quot;Jo&#xe3;ozinho&quot;, &quot;Jo&#xe3;o da Silva&quot;, &quot;19&quot;, &quot;000.000.000-00&quot;},&#xd;&#xa;&#x9;&#x9;{&quot;Mariazinha&quot;, &quot;Maria da Silva&quot;, &quot;20&quot;, &quot;000.000.000-00&quot;},&#xd;&#xa;&#x9;}, &#xd;&#xa;&#x9;&#xd;&#xa;&#x9;new String[] {&quot;Apelido&quot;, &quot;Nome&quot;, &quot;Idade&quot;, &quot;CPF&quot;})" type="code"/>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+              <Table columnCount="5" rowCount="4">
+                <Column editable="true" title="" type="java.lang.Boolean"/>
+                <Column editable="false" title="Nome" type="java.lang.String">
+                  <Data value="Kau&#xe3; Costa Lima"/>
+                  <Data value="Laura Castro Gomes"/>
+                  <Data value="Rafael Cavalcanti Barbosa"/>
+                  <Data value="Vitoria Melo Pinto"/>
+                </Column>
+                <Column editable="false" title="CPF" type="java.lang.String">
+                  <Data value="720.683.736-02"/>
+                  <Data value="682.373.891-07"/>
+                  <Data value="806.840.038-99"/>
+                  <Data value="415.526.462-54"/>
+                </Column>
+                <Column editable="false" title="Idade (anos)" type="java.lang.Integer">
+                  <Data value="23"/>
+                  <Data value="27"/>
+                  <Data value="45"/>
+                  <Data value="17"/>
+                </Column>
+                <Column editable="false" title="Compras Realizadas" type="java.lang.Integer">
+                  <Data value="4"/>
+                  <Data value="2"/>
+                  <Data value="18"/>
+                  <Data value="3"/>
+                </Column>
+              </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0"/>
@@ -73,6 +99,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="tableClientes.getTableHeader().setFont(new Font(&quot;Calibri Light&quot;, Font.BOLD, 15));"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
