--- a/src/com/gamestore/interfaces/ListarProduto.form
+++ b/src/com/gamestore/interfaces/ListarProduto.form
@@ -104,13 +104,6 @@
               </Group>
               <EmptySpace pref="54" max="32767" attributes="0"/>
           </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="250" max="-2" attributes="0"/>
-                  <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="551" max="32767" attributes="0"/>
-              </Group>
-          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -123,13 +116,6 @@
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" pref="99" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-          </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="269" max="-2" attributes="0"/>
-                  <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="214" max="32767" attributes="0"/>
-              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -329,17 +315,61 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="listaProdutos">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Calibri Light" size="14" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
+              <Table columnCount="6" rowCount="6">
+                <Column editable="true" title="" type="java.lang.Boolean"/>
+                <Column editable="false" title="T&#xed;tulo" type="java.lang.String">
+                  <Data value="Destiny"/>
+                  <Data value="Final Fantasy XV"/>
+                  <Data value="Gears of War 3"/>
+                  <Data value="Halo 5"/>
+                  <Data value="Uncharted 2"/>
+                  <Data value="Uncharted 4"/>
+                </Column>
+                <Column editable="false" title="Desenvolvedora" type="java.lang.String">
+                  <Data value="Bungie"/>
+                  <Data value="Square-Enix"/>
+                  <Data value="Epic Games"/>
+                  <Data value="343 Industries"/>
+                  <Data value="Naugthy Dog"/>
+                  <Data value="Naugthy Dog"/>
+                </Column>
+                <Column editable="false" title="Plataforma" type="java.lang.String">
+                  <Data value="Xbox One"/>
+                  <Data value="PC"/>
+                  <Data value="Xbox 360"/>
+                  <Data value="Xbox One"/>
+                  <Data value="Playstation 3"/>
+                  <Data value="Playstation 4"/>
+                </Column>
+                <Column editable="false" title="Pre&#xe7;o" type="java.lang.Double">
+                  <Data value="230.0"/>
+                  <Data value="300.0"/>
+                  <Data value="159.99"/>
+                  <Data value="200.0"/>
+                  <Data value="139.99"/>
+                  <Data value="249.99"/>
+                </Column>
+                <Column editable="false" title="Estoque" type="java.lang.Integer">
+                  <Data value="60"/>
+                  <Data value="0"/>
+                  <Data value="53"/>
+                  <Data value="45"/>
+                  <Data value="340"/>
+                  <Data value="120"/>
+                </Column>
               </Table>
             </Property>
+            <Property name="autoResizeMode" type="int" value="4"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="listaProdutos.getTableHeader().setFont(new Font(&quot;Calibri Light&quot;, Font.BOLD, 15));"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
@@ -353,14 +383,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel11">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri Light" size="14" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="EAN"/>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
