--- a/src/com/gamestore/interfaces/Relatorio.form
+++ b/src/com/gamestore/interfaces/Relatorio.form
@@ -152,6 +152,11 @@
               <Component id="jButton1" min="-2" pref="170" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -204,9 +209,12 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="jButton1" pref="49" max="32767" attributes="0"/>
+              <Component id="jButton1" pref="36" max="32767" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="349" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="306" max="32767" attributes="0"/>
+              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
+              <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -222,11 +230,56 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
+              <Table columnCount="7" rowCount="5">
+                <Column editable="false" title="Pedido N&#xba;" type="java.lang.Integer">
+                  <Data value="null"/>
+                  <Data value="10010101"/>
+                  <Data value="10010101"/>
+                  <Data value="10010102"/>
+                  <Data value="10010102"/>
+                </Column>
+                <Column editable="false" title="Cliente" type="java.lang.String">
+                  <Data value="null"/>
+                  <Data value="Rafael Cavalcanti Barbosa"/>
+                  <Data value="Rafael Cavalcanti Barbosa"/>
+                  <Data value="Pedro Cardoso Cunha"/>
+                  <Data value="Pedro Cardoso Cunha"/>
+                </Column>
+                <Column editable="false" title="Produto" type="java.lang.String">
+                  <Data value="null"/>
+                  <Data value="Uncharted 4"/>
+                  <Data value="Uncharted 2"/>
+                  <Data value="Xbox 360"/>
+                  <Data value="Gears of War 3"/>
+                </Column>
+                <Column editable="false" title="Quantidade" type="java.lang.Integer">
+                  <Data value="null"/>
+                  <Data value="3"/>
+                  <Data value="1"/>
+                  <Data value="1"/>
+                  <Data value="1"/>
+                </Column>
+                <Column editable="false" title="Data" type="java.lang.String">
+                  <Data value="null"/>
+                  <Data value="01/01/2010"/>
+                  <Data value="01/01/2010"/>
+                  <Data value="03/02/2010"/>
+                  <Data value="03/02/2010"/>
+                </Column>
+                <Column editable="false" title="Valor Unit&#xe1;rio" type="java.lang.Double">
+                  <Data value="null"/>
+                  <Data value="250.0"/>
+                  <Data value="150.0"/>
+                  <Data value="1350.0"/>
+                  <Data value="130.0"/>
+                </Column>
+                <Column editable="false" title="Total" type="java.lang.Double">
+                  <Data value="null"/>
+                  <Data value="750.0"/>
+                  <Data value="150.0"/>
+                  <Data value="1350.0"/>
+                  <Data value="130.0"/>
+                </Column>
               </Table>
             </Property>
           </Properties>
@@ -241,7 +294,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Calibri Light" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="1 m&#xea;s"/>
+        <Property name="text" type="java.lang.String" value="24 horas"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="jRadioButton2">
@@ -252,7 +305,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Calibri Light" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="3 meses"/>
+        <Property name="text" type="java.lang.String" value="1 semana"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="jRadioButton3">
@@ -448,6 +501,14 @@
           <Font name="Calibri Light" size="14" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="GERAR RELAT&#xd3;RIO"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel10">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Calibri Light" size="24" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="TOTAL DE VENDAS DO PER&#xcd;ODO: R$ 2380,00"/>
       </Properties>
     </Component>
   </SubComponents>
