--- a/src/com/gamestore/interfaces/IncluirProduto.form
+++ b/src/com/gamestore/interfaces/IncluirProduto.form
@@ -344,6 +344,7 @@
             </Property>
           </Properties>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(Genero.getDescricoes())"/>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
